--- a/src/assets/css/network.less
+++ b/src/assets/css/network.less
@@ -6,17 +6,24 @@
     // margin-left: 100px;
     // height: 100%;
     // min-height: 100vh;
-    background-color:rgba(63, 81, 181, 0.1); ;
+    background-color: rgba(63, 81, 181, 0.1);
 }
 
+.bg-none {
+    background: @backcolor--white;
+}
+.align-center{
+    padding: 15px 15px;   
+}
 .model-content {
     background: @backcolor--white;
-    height: 100%;
-    padding:15px 15px;
+
+    padding: 15px 15px;
+    min-height: 100vh;
 
     h5 {
         padding: 16px;
-        
+
 
     }
 
@@ -82,6 +89,18 @@
             padding: 2px 24px;
             margin-top: 8px;
             min-height: 327px;
+
+            &__card-height {
+                background: #FFFFFF;
+                border: 1px solid #ECECEC;
+                box-shadow: 0 0 5px 2px #ECECEC;
+                border-radius: 24px;
+                padding: 2px 24px;
+                margin-top: 8px;
+                min-height: 100%;
+            }
+           
+
             &__icon {
                 width: 70px;
                 height: 72px;
@@ -113,6 +132,36 @@
                 }
             }
 
+            &__profile-sub {
+                font-weight: 600;
+                font-size: 18px;
+                color: #1B1C1E;
+                .padding-left {
+                    padding-left: 5px;
+                }
+
+
+                .sub-heading {
+                    font-weight: 400;
+                    font-size: 14px;
+                    line-height: 14px;
+                    color: #525252;
+
+                }
+
+                
+                .progress {
+                    width: 338px;
+                    height: 8px;
+                }
+
+                .progress-bar {
+                    background-color: @backcolor--red;
+                }
+
+               
+
+            }
 
             &__titel {
                 font-weight: 600;
@@ -176,6 +225,39 @@
         }
     }
 }
+.pargh {
+    text-align: center;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 16px;
+    color: #959699;
+    min-height: 19px;
+}
+
+.student {
+    &__title {
+        font-weight: 700;
+        font-size: 15px;
+        line-height: 22px;
+        color: @color--light-black;
+
+    }
+
+    &__sub-title {
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 14px;
+        color: @color--light-gray;
+    }
+
+    &__List {
+        font-weight: 600;
+        font-size: 15px;
+        line-height: 22px;
+        color: #333333;
+        margin-bottom: 0px;
+    }
+}
 
 .cardgrid {
     position: relative;
@@ -197,24 +279,25 @@
     inset: 29px 0px auto !important;
     transform: translate(0px, 0px) !important;
 }
-.cardgrid__dot{
+
+.cardgrid__dot {
     .btn-primary {
 
         background-color: #ffffff !important;
         border-color: #ffffff !important;
-    
+
     }
-    
+
     .btn-primary:hover {
         background-color: #ffffff !important;
         border-color: #ffffff !important;
     }
-    
+
     .primary.dropdown-toggle {
         background-color: #ffffff !important;
         border-color: #ffffff !important;
     }
-    
+
     .btn-primary.dropdown-toggle:focus {
         box-shadow: 0 0 0 0.25rem rgba(255, 255, 255, 0.5) !important;
     }
@@ -238,8 +321,8 @@
 
 
 /*profile */
-.profile{
-    &__upper{
+.profile {
+    &__upper {
         position: relative;
     }
 }
@@ -324,4 +407,3 @@
     height: 100%;
 
 }
-
